syntax="proto3";

import "imported.proto";

message Nested {
  string normalProperty = 1;
  Imported nestedProperty = 2;
}