enum Proto2 {
  OptionA = 0;
  OptionB = 1;
}