syntax="proto3";

message SubImported {
  string first = 1;
  bool second = 2;
}